		Attendance: added reason as title/hover over type in Student History report function
		Behaviour: made column widths consistent when viewing behaviour log
		Behaviour: increased min-width for Action column
		Behaviour: fixed <? bug
		Departments: fixed filter in Homework link from Class view page
		Finance: fixed <? bug
		Finance: added ability to provide multiple company email addresses
		Form Groups: adjusted labels in Sort By select
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue
		Formal Assessment: added interface for parents and students to view External Assessments (off by default)
		Library: added item count column to lending log
		Library: added count of records to Manage Catalog
		Library: removed required status from ISBN10 field in Print Publication
		Library: added Condition field to allow tracking of the physical state of an asset
		Library: added field to indicate whether an item will be replaced or not
		Library: fixed bug preventing ID clash check from working properly
		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
		Markbook: fixed uploaded response file selector gigantism issue
		Markbook: added line break display to full comment in various viewing locations
		Messenger: stripped JavaScript out of widget preview text.
		Messenger: removed signature from Quick Wall messages
		Planner: fixed surplus slash issue in Crowd Assessment settings in Lesson Planner add page
		Planner: fixed style mismatch in Guest section of lesson planner full view
		Planner: attendance alignment tweak
		Planner: fixed bug preventing parent access to lesson listings
		Planner: added ordering field to units to control the order in which they display
		Planner: lesson summary now scraped from Smart Block titles
		Planner: fixed lesson ordering bug in unit dump